# LatencyMeterRefreshed

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  FUNDING.yml  Fonts.h  LICENSE  LatencyMeterRefreshed.rc  LatencyMeterRefreshed.sln  LatencyMeterRefreshed.vcxproj  LatencyMeterRefreshed.vcxproj.filters  README.md  constants.h  gui.cpp  gui.h  helper.cpp  helper.h  helperJson.cpp  helperJson.h  imgui.ini  main.cpp  resource.h  serial.cpp  serial.h  structs.h
App/: AppCore.cpp  AppCore.h  AppGui.cpp  AppGui.h  AppInput.cpp  AppInput.h  AppState.h  Config.h  Models.h
Arduino/: SystemLatencyMeter.ino
Arduino/SystemLatencyMeter/: SystemLatencyMeter.ino
Audio/: AudioProcessor.cpp  AudioProcessor.h  Sound_Helper.cpp  Sound_Helper.h
Dependencies/PortAudio/Include/: portaudio.h
Dependencies/PortAudio/lib/: portaudio_x64.lib  portaudio_x64_dbg.lib  portaudio_x86.lib  portaudio_x86_dbg.lib
GUI/: Gui.cpp  Gui.h  UIComponents.cpp  UIComponents.h
Helpers/: AppHelper.cpp  AppHelper.h  JsonHelper.cpp  JsonHelper.h
Serial/: Serial.cpp  Serial.h
